kubernetes/paperless-ngx/manifest/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: paperless-ngx-app
  namespace: my-paperless-ngx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: paperless.local.127.0.0.1.sslip.io
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: paperless-ngx-app
         port:
          number: 8000
  tls: []
